--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Connection": "Server=JATABILOG;Database=SMSDb;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=true"
+  },
+  "Jwt": {
+    "Key": "lJ3M49FFzPa2uoQhfCIh3ogOOWhC1L7Z9mIu8qPAtLGjPnNdAb?XVIx=A4K7njUO",
+    "Issuer": "https://localhost:7203/",
+    "Audience": "https://localhost:7203/"
   }
 }
