--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=JATABILOG;Database=SMSDb;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=true"
+    "Connection": "Server=LAPTOP-K3EKH2GT;Database=SMSDb;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=true"
+    //"Connection": "Server=JATABILOG;Database=SMSDb;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=true"
   },
   "Jwt": {
     "Key": "lJ3M49FFzPa2uoQhfCIh3ogOOWhC1L7Z9mIu8qPAtLGjPnNdAb?XVIx=A4K7njUO",
